Fixed a bug causing the mobile designs image on the 'about me' to break on resize.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,7 +227,7 @@ button {
         font-size: 2em;
     }
     #deepDiveBackground {
-        background-image: url(./../images/profiles/myProfileDive.png);
+        background-image: url(./../images/profiles/myProfileDive.jpg);
         /* background-size: 100%; */
         background-repeat: no-repeat;
         width: 100vw !important;
